fix: app css tracking-tighter removed for improvement readability

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,27 +7,27 @@
 }
 
 h1 {
-    @apply font-serif font-bold text-5xl lg:text-6xl xl:text-[4rem] 2xl:text-7xl leading-[140%] tracking-tighter;
+    @apply font-serif font-bold text-5xl lg:text-6xl xl:text-[4rem] 2xl:text-7xl leading-[140%];
 }
 
 h2 {
-    @apply font-semibold text-4xl xl:text-5xl 2xl:text-6xl leading-[150%] tracking-tighter;
+    @apply font-semibold text-4xl xl:text-5xl 2xl:text-6xl leading-[150%];
 }
 
 h3 {
-    @apply font-semibold text-3xl xl:text-[2.5rem] 2xl:text-5xl leading-[150%] tracking-tighter;
+    @apply font-semibold text-3xl xl:text-[2.5rem] 2xl:text-5xl leading-[150%];
 }
 
 h4 {
-    @apply font-semibold text-2xl xl:text-[2.25rem] 2xl:text-4xl leading-[150%] tracking-tighter;
+    @apply font-semibold text-2xl xl:text-[2.25rem] 2xl:text-4xl leading-[150%];
 }
 
 h5 {
-    @apply font-semibold text-xl xl:text-[2rem] leading-[150%] tracking-tighter;
+    @apply font-semibold text-xl xl:text-[2rem] leading-[150%];
 }
 
 h6 {
-    @apply font-medium text-xl xl:text-[1.5rem] leading-[150%] tracking-tighter;
+    @apply font-medium text-xl xl:text-[1.5rem] leading-[150%];
 }
 
 p {
